# vector_triage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
infra/: main.tf  variables.tf
postgres/: init.sql
readme/: exploring_db.md
src/: embedding.py  ingest.py  utils.py
